--- a/static/css/global.css
+++ b/static/css/global.css
@@ -27,8 +27,14 @@ textarea:focus {
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
 }
+html{
+    width: 100%;
+    height: 100%;
+}
 body{
     margin: 0;
+    width: 100%;
+    height: 100%;
 }
 .main{
     width: 1200px;
@@ -88,19 +94,19 @@ body{
     float: right;
 }
 .border-all{
-    border: 1px solid #888;
+    border: 1px solid #ccc;
 }
 .border-t{
-    border-top: 1px solid #888;
+    border-top: 1px solid #ccc;
 }
 .border-r{
-    border-right: 1px solid #888;
+    border-right: 1px solid #ccc;
 }
 .border-b{
-    border-bottom: 1px solid #888;
+    border-bottom: 1px solid #ccc;
 }
 .border-l{
-    border-left: 1px solid #888;
+    border-left: 1px solid #ccc;
 }
 a{
     color: #333333;
@@ -114,6 +120,115 @@ a:hover{
 
 /*公共头部*/
 .headerBox{
+    position: fixed;
+    width: 100%;
     height: 90px;
     background: #fff;
+    z-index: 100;
+}
+.header{
+    width: 1200px;
+    height: 90px;
+    margin: 0 auto;
+}
+.headerLogo{
+    width: 188px;
+    height: 90px;
+}
+.headerLogo img{
+    width: 100%;
+    margin-top: 15px;
+}
+.headerItem {
+    height: 90px;
+    line-height: 90px;
+    position: relative;
+    font-size: 16px;
+    margin: 0 30px;
+    color: #333;
+    transition: all 0.3s;
+}
+.headerItem:hover .headerText{
+    color: #0e61b5;
+}
+.headerOn .headerText{
+    color: #0e61b5;
+}
+.headerBorder{
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background-color: #0e61b5;
+    bottom: 26px;
+    opacity: 0;
+    transition: all 0.3s;
+}
+.headerItem:hover .headerBorder{
+    opacity: 1;
+}
+.headerOn .headerBorder{
+    opacity: 1;
+}
+.headerCategoriesBox{
+    position: absolute;
+    width: 80px;
+    background-color: #fff;
+    top: 75px;
+    left: 50%;
+    margin-left: -40px;
+    display: none;
+    border: 1px solid #ccc;
+}
+.headerItem:hover .headerCategoriesBox{
+    display: block;
+    -webkit-animation: myCategory 0.4s;
+    animation: myCategory 0.4s;
+}
+@keyframes myCategory {
+    0% {
+        top: 60px;
+        opacity: 0.5;
+    }
+    100% {
+        top: 75px;
+        opacity: 1;
+    }
+}
+.headerCategoriesItem{
+    line-height: 35px;
+    font-size: 14px;
+    color: #333;
+    text-align: center;
+    transition: all .3s;
+}
+.headerCategoriesItem:hover{
+    background-color: #333333;
+    color: #fff;
+}
+
+/*轮播样式*/
+.pagination{
+    position: absolute;
+    text-align: center;
+    -webkit-transition: .3s opacity;
+    -o-transition: .3s opacity;
+    transition: .3s opacity;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    z-index: 10;
+    width: 100%;
+    bottom: 90px;
+}
+.swiper-pagination-switch {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    background: #999;
+    box-shadow: 0px 1px 2px #555 inset;
+    margin: 0 15px;
+    cursor: pointer;
+}
+.swiper-active-switch{
+    background-color: #fff;
 }
