--- a/static/css/global.css
+++ b/static/css/global.css
@@ -37,10 +37,11 @@ body{
     height: 100%;
 }
 .main{
-    width: 1200px;
-    margin: 0 auto;
-    position: relative;
+    width: 100%;
     height: 100%;
+    position: absolute;
+    padding-top: 90px;
+    top: 0;
 }
 .main:after{
     content: "";
