添加关于我们页面，修改首页html代码，修改公共css代码，

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -222,11 +222,10 @@ a:hover{
 }
 .swiper-pagination-switch {
     display: inline-block;
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
     border-radius: 10px;
-    background: #999;
-    box-shadow: 0px 1px 2px #555 inset;
+    background: rgba(255,255,255,.5);
     margin: 0 15px;
     cursor: pointer;
 }
